# wayland-copy-capture-test-client

./: Cargo.toml
src/: main.rs
